; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_bounds.c_bounds_scale.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_bounds.c_bounds_scale.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bounds = type { i32, i32 }
%struct.vec3 = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bounds_scale(%struct.bounds* %0, %struct.bounds* %1, %struct.vec3* %2) #0 {
  %4 = alloca %struct.bounds*, align 8
  %5 = alloca %struct.bounds*, align 8
  %6 = alloca %struct.vec3*, align 8
  store %struct.bounds* %0, %struct.bounds** %4, align 8
  store %struct.bounds* %1, %struct.bounds** %5, align 8
  store %struct.vec3* %2, %struct.vec3** %6, align 8
  %7 = load %struct.bounds*, %struct.bounds** %4, align 8
  %8 = getelementptr inbounds %struct.bounds, %struct.bounds* %7, i32 0, i32 1
  %9 = load %struct.bounds*, %struct.bounds** %5, align 8
  %10 = getelementptr inbounds %struct.bounds, %struct.bounds* %9, i32 0, i32 1
  %11 = load %struct.vec3*, %struct.vec3** %6, align 8
  %12 = call i32 @vec3_mul(i32* %8, i32* %10, %struct.vec3* %11)
  %13 = load %struct.bounds*, %struct.bounds** %4, align 8
  %14 = getelementptr inbounds %struct.bounds, %struct.bounds* %13, i32 0, i32 0
  %15 = load %struct.bounds*, %struct.bounds** %5, align 8
  %16 = getelementptr inbounds %struct.bounds, %struct.bounds* %15, i32 0, i32 0
  %17 = load %struct.vec3*, %struct.vec3** %6, align 8
  %18 = call i32 @vec3_mul(i32* %14, i32* %16, %struct.vec3* %17)
  ret void
}

declare dso_local i32 @vec3_mul(i32*, i32*, %struct.vec3*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
